--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,11 +3,15 @@ layout: page
 ---
 {%- assign items = site.data[site.metadata] -%}
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-6">
 
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" height="300" %}
   
+  </div>
+    <div class="col-md-6">  
+
+      {% include index/carousel.html title="Sample Items" height="300" %}
+ 
   </div>
   <div class="col-md-12">
 
