--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -2,8 +2,8 @@
   <div class="card-body">
     <h5 class="card-title">Description</h5>
     <p class="card-text">Hi, my name is Brandon.
-    Here's a new line.
-    And another one.</p>
+    /nHere's a new line.
+    /nAnd another one.</p>
     {%- assign about = site.data.config-nav | where: "stub","/about.html" | size -%}
     {% if about > 0 %}<a class="btn btn-outline-primary" href="{{ '/about.html' | relative_url }}" >Learn More &raquo;</a>{% endif %}
   </div>
