--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,9 +1,7 @@
 <div class="card mb-3">
   <div class="card-body">
     <h5 class="card-title">Description</h5>
-    <p class="card-text">Hi, my name is Brandon.
-    /nHere's a new line.
-    /nAnd another one.</p>
+    <p class="card-text">Hi, my name is Brandon.<br>Here's a new line.<br>And another one.</p>
     {%- assign about = site.data.config-nav | where: "stub","/about.html" | size -%}
     {% if about > 0 %}<a class="btn btn-outline-primary" href="{{ '/about.html' | relative_url }}" >Learn More &raquo;</a>{% endif %}
   </div>
