--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
   <div class="card-body">
     <h5 class="card-title">Description</h5>
-    <p class="card-text">Hangouts at UM (HUM) is a catalog of places to hang out at UM. Each entry includes information about location, noise, traffic, and more. To help up refine our metadata, use the links below.<br><br><a href="url">Review old hangouts.</a><br><br><a href="url">Propose new hangouts</a></p>
+    <p class="card-text">Hangouts at the University of Maryland (HUM) is a collaborative catalog of places to hang out at UMD. Each entry includes information about location, noise, traffic, and more. To help up refine our metadata, use the links below.<br><br><a href="https://forms.gle/ShENrSxLvNmtDWDu5">Review old hangouts.</a><br><br><a href="https://forms.gle/YDMceS4ygDAxY5Mt6">Propose new hangouts</a></p>
   </div>
 </div>
